2.5.2 / 2013-07-05

* Bug fixes

  * Get connection from the right connection pool (namely, the model's, not AR::Base's)

2.5.1 / 2013-03-15

* Enhancements

  * Just suggest that people use roo > 1.10.3

2.5.0 / 2013-03-15

* Breaking changes

  * Lock to roo 1.10.1 and activerecord > 3

* Enhancements

  * If you don't define a `key` in a data_miner block, then just keep appending records - thanks @towerhe
  * Got rid of ridiculous "install unicode-utils" warning

* Bug fixes

  * Don't die because an Alchemist::NumericConversion is passed to a function that expects a plain Float - thanks @towerhe

2.4.1 / 2012-07-26

* Enhancements

  * Support sqlite in sql steps
  * More accurately detect if a table has been created during a run

2.4.0 / 2012-07-26

* Breaking changes

  * Entirely remove taps support - it doesn't preserve foreign key constraints and adds a lot of complexity

* Enhancements

  * New "sql" step - executes SQL provided as a string OR a local/remote SQL file provided as a URL
  * Die with a useful error message if a column specified in an import step doesn't exist - thanks @chrisle https://github.com/seamusabshere/data_miner/issues/17
  * Allow setting :validate => true on import steps - thanks @chrisle https://github.com/seamusabshere/data_miner/issues/18

2.3.4 / 2012-07-06

* Bug fixes

  * Fix silly deadlock

2.3.3 / 2012-07-06

* Bug fixes

  * Always register data miner scripts with DataMiner.model_names or else DataMiner.run won't work as expected - just bad logic before

2.3.2 / 2012-06-25

* Bug fixes

  * Make sure 't', 'true', 1, '1', 'on', 'yes', etc. are treated as true for boolean columns (and 'f', 'false', 'FALSE', etc.)

2.3.1 / 2012-06-22

* Bug fixes

  * Avoid duplicate rows by correctly identifying auto-increment versus non-auto-increment integer primary keys
  * Properly sort per-row column statistics

2.3.0 / 2012-06-21

* Enhancements

  * Using https://github.com/seamusabshere/upsert to speed up import steps when possible.